Updated UI images, prevent sound from playing in background.

--- a/src/www/index.html
+++ b/src/www/index.html
@@ -59,7 +59,7 @@
           <h2>Disruptor</h2>
           <p><strong>Put a stop to annoying babble.</strong> Disruptor listens for someone to start nagging you and stops them in their tracks. Simply place your phone next to you and enjoy some quiet time &mdash; nobody can withstand the Disruptor for more than a few seconds.</p>
 
-          <a class="download" href="http://play.google.com/store/apps/details?id=com.theriddlebrothers.disruptor"><img src="assets/img/google_play.png" alt="View Disruptor in Google Play Store" /></a>
+          <a class="download" href="https://play.google.com/store/apps/details?id=com.theriddlebrothers.disruptor"><img src="assets/img/google_play.png" alt="View Disruptor in Google Play Store" /></a>
 
           <h3>What Others Are Saying</h3>
 
